2013-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/gv.el (gv-get): Warn about CL-compiled places.

2013-09-04  Xue Fuqiao  <xfq.free@gmail.com>

	* vc/vc.el (vc-ignore): Rewrite.
	(vc-default-ignore): New function.
	(vc-default-ignore-completion-table): Use find-ignore-file.

	* vc/vc-bzr.el (vc-bzr-ignore, vc-bzr-ignore-completion-table):
	* vc/vc-git.el (vc-git-ignore, vc-git-ignore-completion-table):
	* vc/vc-hg.el (vc-hg-ignore, vc-hg-ignore-completion-table):
	Remove.  Most code moved to vc.el.

2013-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/tramp-gvfs.el (tramp-gvfs-mount-spec, tramp-synce-list-devices): 
	* net/tramp-smb.el (tramp-smb-get-file-entries):
	* net/tramp-sh.el (tramp-sh-handle-insert-directory)
	(tramp-compute-multi-hops): Fix misuses of `add-to-list'.

	* net/eww.el (eww-display-raw): Remove unused argument `charset'.
	Update call to it.
	(eww-change-select): Remove unused var `properties'.
	(eww-make-unique-file-name): Remove unused var `base'.

	* finder.el (finder-compile-keywords): Don't mess with windows.

	* calculator.el (calculator-funcall): Fix typo in last change.

	* vc/vc-git.el (vc-git-checkin): Make it possible to commit a merge.

	* emacs-lisp/package.el (package-activate-1): Don't let a missing
	<pkg>-autoloads.el file stop us.

	* net/tramp.el (with-parsed-tramp-file-name): Silence compiler
	warnings, and factor out common code.

2013-09-03  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-calculate-indent): Consider
	two-character operators and whether the character preceding them
	changes their meaning (Bug#15208).

2013-09-02  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Format code sent to Python shell for robustness.
	* progmodes/python.el (python-shell-buffer-substring):
	New function.
	(python-shell-send-region, python-shell-send-buffer): Use it.

2013-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-compat.el (tramp-compat-user-error): Move it ...