@@ -1,5 +1,8 @@
 2013-09-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* autorevert.el (auto-revert-notify-handler): Explicitly ignore
+	`deleted'.  Don't drop errors silently.
+
 	* emacs-lisp/gv.el (gv-get): Warn about CL-compiled places.
 
 2013-09-04  Xue Fuqiao  <xfq.free@gmail.com>
@@ -15,7 +18,7 @@
 
 2013-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>
 
-	* net/tramp-gvfs.el (tramp-gvfs-mount-spec, tramp-synce-list-devices): 
+	* net/tramp-gvfs.el (tramp-gvfs-mount-spec, tramp-synce-list-devices):
 	* net/tramp-smb.el (tramp-smb-get-file-entries):
 	* net/tramp-sh.el (tramp-sh-handle-insert-directory)
 	(tramp-compute-multi-hops): Fix misuses of `add-to-list'.
